--- a/translator-f/src/App.css
+++ b/translator-f/src/App.css
@@ -44,3 +44,11 @@
   .dark-mode button:hover {
     color: var(--secondary-color);
   }
+
+
+  video {
+    width: 100%;
+    height: auto;
+    aspect-ratio: 16 / 9;
+    border: 2px solid #ccc;
+  }
