--- a/translator-f/src/index.css
+++ b/translator-f/src/index.css
@@ -4,5 +4,7 @@
 
 
 body {
-    @apply bg-gray-100;
-  }
+    background-color: black;
+    color: hsl(var(--foreground));
+    transition: background-color 0.3s, color 0.3s;
+}
